# elizaRestApiTesting

./: README.md  ascToWasmTest.ts  ascToWasmTest.wasm  math.html  postRequestTextPrompt.js
AssemblyScript/math/: math.ts
AssemblyScript/string/: string.html  string.ts  string.wasm
Rust/hello-wasm/: index.html
Rust/restApiGetUrlText/: Cargo.toml  index.html
Rust/restApiGetUrlText/src/: lib.rs
Rust/restApiPostElizaPrompt/: Cargo.toml  README.md  index.html
Rust/restApiPostElizaPrompt/src/: lib.rs
Rust/restApiPostUrl/src/: lib.rs
Rust/stringType/: Cargo.toml  index.html
Rust/stringType/src/: lib.rs
